--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,300italic,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="shortcut icon" href="./img/logo-pestaña.jpg" />
 	<title>Wonderland</title>
 </head>
 <body>
